--- a/app/src/main/res/layout/layout_app_toolbar.xml
+++ b/app/src/main/res/layout/layout_app_toolbar.xml
@@ -28,13 +28,13 @@
 
         <TextView
             android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:fontFamily="@font/lato_black"
             android:textColor="@color/black"
             android:textSize="18sp"
-            tools:text="Travel"
-            android:fontFamily="@font/lato_black"
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            tools:text="Travel" />
 
     </RelativeLayout>
 
