--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,11 +9,15 @@
     <color name="white">#FFFFFFFF</color>
     <color name="status_bar">#808080</color>
     <color name="transparent">#ffffffff</color>
-
     <color name="tint_white_background_icon">#777777</color>
     <color name="bg_button_dashboard">#373737</color>
     <color name="tint_dark_background_icon_dashboard">#B2B2B2</color>
-
     <color name="text_year_selector">#5B5B5B</color>
-    <color name="border_button_select_weather">#80777777</color>
+    <color name="border_button_select_weather">#5B5B5B</color>
+    <color name="dashboard_card_shadow">#DCDCDC</color>
+    <color name="dashboard_card_default_background">#65dbff</color>
+    <color name="text_component_dashboard">#ffffff</color>
+    <color name="lb_text_end_week">#f84e95</color>
+    <color name="lb_text_start_week">#75affb</color>
+    <color name="lb_text_middle_weel">#a7a7a7</color>
 </resources>
