--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,14 @@
         <item name="android:padding">@dimen/_10sdp</item>
     </style>
 
+    <style name="DialogButton">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/quicksand_bold</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:padding">@dimen/_10sdp</item>
+        <item name="android:clickable">true</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+    </style>
+
 </resources>
