--- a/app/src/main/res/layout/fragment_month_card.xml
+++ b/app/src/main/res/layout/fragment_month_card.xml
@@ -1,169 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.wajahatkarim3.easyflipview.EasyFlipView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:flipEnabled="true"
-    app:flipOnTouch="true"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/flipView"
-    app:flipDuration="400"
-    app:flipType="horizontal"
-    app:flipFrom="front"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.loopeer.shadow.ShadowView
-        android:id="@+id/shadow_view_back"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/vpMonthCard"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginHorizontal="@dimen/_5sdp"
-        android:foreground="?attr/selectableItemBackground"
-        android:padding="10dp"
-        app:backgroundColor="@color/white"
-        app:cornerRadius="10sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:shadowColor="@color/dashboard_card_shadow"
-        app:shadowMargin="20dp"
-        app:shadowRadius="20sp">
+        android:layout_height="match_parent"/>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/tvMonthInNumberBack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/_20sdp"
-                android:fontFamily="@font/quicksand_regular"
-                android:includeFontPadding="false"
-                android:textSize="65sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:text="7" />
-
-            <TextView
-                android:textAllCaps="true"
-                android:id="@+id/tvMonthInTextBack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/_20sdp"
-                android:fontFamily="@font/quicksand_medium"
-                android:includeFontPadding="false"
-                android:textSize="25sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvMonthInNumberBack"
-                android:text="Jul" />
-
-            <TextView
-                android:id="@+id/tvHint"
-                android:fontFamily="@font/quicksand_bold"
-                android:gravity="center"
-                android:layout_marginBottom="@dimen/_5sdp"
-                android:text="@string/hint_write_diary"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:gravity="center_horizontal"
-                android:paddingTop="@dimen/_20sdp"
-                app:layout_constraintBottom_toTopOf="@id/tvHint"
-                app:layout_constraintTop_toBottomOf="@id/tvMonthInTextBack"
-                android:layout_height="0dp">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:id="@+id/rvDateInMonth"
-                    android:layout_height="wrap_content"/>
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </com.loopeer.shadow.ShadowView>
-
-    <com.loopeer.shadow.ShadowView
-        android:id="@+id/shadow_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginHorizontal="@dimen/_5sdp"
-        android:foreground="?attr/selectableItemBackground"
-        android:padding="10dp"
-        app:backgroundColor="@color/dashboard_card_default_background"
-        app:cornerRadius="10sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:shadowColor="@color/dashboard_card_shadow"
-        app:shadowMargin="20dp"
-        app:shadowRadius="20sp">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/tvMonthInNumber"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/_20sdp"
-                android:fontFamily="@font/quicksand_regular"
-                android:includeFontPadding="false"
-                android:textColor="@color/text_component_dashboard"
-                android:textSize="65sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:text="7" />
-
-            <TextView
-                android:textAllCaps="true"
-                android:id="@+id/tvMonthInText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/_20sdp"
-                android:fontFamily="@font/quicksand_medium"
-                android:includeFontPadding="false"
-                android:textColor="@color/text_component_dashboard"
-                android:textSize="25sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvMonthInNumber"
-                android:text="Jul" />
-
-            <ProgressBar
-                android:id="@+id/pbProgress"
-                android:progress="50"
-                android:progressTint="@color/white"
-                android:progressBackgroundTint="@color/white"
-                android:layout_marginBottom="@dimen/_15sdp"
-                android:layout_marginHorizontal="@dimen/_20sdp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="@dimen/_150sdp"
-                android:layout_height="wrap_content"/>
-
-            <TextView
-                android:fontFamily="@font/quicksand_medium"
-                android:text="21/31"
-                app:layout_constraintStart_toStartOf="@id/pbProgress"
-                app:layout_constraintBottom_toTopOf="@id/pbProgress"
-                android:textColor="@color/text_component_dashboard"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <ImageView
-                android:padding="@dimen/_7sdp"
-                app:layout_constraintBottom_toBottomOf="@id/pbProgress"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:src="@drawable/ic_three_dots"
-                android:adjustViewBounds="true"
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="wrap_content"
-                app:tint="@color/text_component_dashboard" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </com.loopeer.shadow.ShadowView>
-
-</com.wajahatkarim3.easyflipview.EasyFlipView>
+</androidx.constraintlayout.widget.ConstraintLayout>
