--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -6,8 +6,21 @@
     app:startDestination="@id/dashboardFragment">
 
     <fragment
-        tools:layout="@layout/fragment_dashboard"
         android:id="@+id/dashboardFragment"
         android:name="com.cleanarchitectkotlinflowhiltsimplestway.presentation.dashboard.DashboardFragment"
-        android:label="DashboardFragment" />
+        android:label="DashboardFragment"
+        tools:layout="@layout/fragment_dashboard">
+        <action
+            android:id="@+id/action_dashboardFragment_to_createDiaryPostFragment"
+            app:destination="@id/createDiaryPostFragment"
+            app:enterAnim="@anim/default_enter_anim"
+            app:exitAnim="@anim/default_exit_anim"
+            app:popEnterAnim="@anim/default_pop_enter_anim"
+            app:popExitAnim="@anim/default_pop_exit_anim" />
+    </fragment>
+    <fragment
+        android:id="@+id/createDiaryPostFragment"
+        android:name="com.cleanarchitectkotlinflowhiltsimplestway.presentation.create.CreateDiaryPostFragment"
+        android:label="CreateDiaryPostFragment"
+        tools:layout="@layout/fragment_create_diary_post" />
 </navigation>
