--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,36 @@
         <item name="android:foreground">?attr/selectableItemBackground</item>
     </style>
 
+    <style name="Divider">
+        <item name="android:alpha">0.1</item>
+        <item name="android:background">@android:color/black</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_width">match_parent</item>
+    </style>
+
+    <style name="WeatherSelectorContainer">
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+        <item name="android:clickable">true</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:padding">@dimen/_15sdp</item>
+    </style>
+
+    <style name="WeatherSelectorIcon">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">@dimen/_20sdp</item>
+        <item name="tint">@color/weather_selector</item>
+        <item name="android:adjustViewBounds">true</item>
+    </style>
+
+    <style name="WeatherSelectorText">
+        <item name="android:layout_marginStart">@dimen/_10sdp</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:fontFamily">@font/lato_bold</item>
+        <item name="android:textColor">@color/weather_selector</item>
+    </style>
+
 </resources>
