--- a/app/src/main/res/layout/fragment_create_diary_post.xml
+++ b/app/src/main/res/layout/fragment_create_diary_post.xml
@@ -13,8 +13,8 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatImageView
-            style="@style/ToolBarIcon"
             android:id="@+id/ivBack"
+            style="@style/ToolBarIcon"
             android:layout_alignParentStart="true"
             app:srcCompat="@drawable/ic_undo"
             app:tint="@color/tool_bar_item_create" />
@@ -24,10 +24,13 @@
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
+            android:id="@+id/tvSave"
+            android:clickable="true"
+            android:foreground="?attr/selectableItemBackground"
             android:fontFamily="@font/oswald_bold"
             android:gravity="center"
             android:paddingHorizontal="@dimen/_10sdp"
-            android:text="Save"
+            android:text="@string/save"
             android:textColor="@color/tool_bar_item_create"
             android:textSize="16sp" />
 
@@ -50,13 +53,25 @@
                 android:layout_height="0dp"
                 android:background="@color/place_holder_add_image"
                 app:layout_constraintDimensionRatio="W, 1:1"
-                app:layout_constraintTop_toTopOf="parent"></View>
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvSelectedImages"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="@id/vAddImagePlaceHolder"
+                app:layout_constraintEnd_toEndOf="@id/vAddImagePlaceHolder"
+                app:layout_constraintStart_toStartOf="@id/vAddImagePlaceHolder"
+                app:layout_constraintTop_toTopOf="@id/vAddImagePlaceHolder" />
 
             <ImageView
+                android:id="@+id/ivAddPhoto"
                 android:layout_width="@dimen/_80sdp"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:background="@color/bg_btn_add_image"
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackground"
                 android:padding="@dimen/_28sdp"
                 android:src="@drawable/ic_add_diary_image"
                 app:layout_constraintBottom_toBottomOf="@id/vAddImagePlaceHolder"
@@ -103,7 +118,6 @@
                 app:srcCompat="@drawable/ic_weather" />
 
             <EditText
-                android:textColorHint="@color/create_diary_text_hint"
                 android:id="@+id/etContent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -114,6 +128,7 @@
                 android:hint="@string/hint_write_diary_content"
                 android:inputType="textMultiLine"
                 android:textColor="@color/create_diary_text_hint"
+                android:textColorHint="@color/create_diary_text_hint"
                 app:layout_constraintTop_toBottomOf="@id/ivWeather">
 
             </EditText>
@@ -121,5 +136,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
+
+    <include layout="@layout/layout_create_post_actions" android:id="@+id/llOptions"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
