--- a/app/src/main/res/layout/fragment_month_card_behind.xml
+++ b/app/src/main/res/layout/fragment_month_card_behind.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <FrameLayout
         android:id="@+id/shadow_view_back"
@@ -42,13 +43,13 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvMonthInNumberBack"
-                android:text="Jul" />
+                tools:text="Jul" />
 
             <TextView
                 android:id="@+id/tvHint"
                 android:fontFamily="@font/quicksand_bold"
                 android:gravity="center"
-                android:layout_marginBottom="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_15sdp"
                 android:text="@string/hint_write_diary"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_width="match_parent"
