--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,8 +22,12 @@
     <color name="lb_text_middle_weel">#a7a7a7</color>
     <color name="tool_bar_item_create">#6d6d6d</color>
     <color name="place_holder_add_image">#ededed</color>
-    <color name="bg_btn_add_image">#c1c1c1</color>
+    <color name="bg_btn_add_image">#40000000</color>
     <color name="create_diary_text_hint">#BEBEBE</color>
     <color name="create_diary_text_content">#666666</color>
     <color name="weather_selector">#333333</color>
+    <color name="bg_create_post_options_layout_open">#80000000</color>
+    <color name="bg_create_post_options_layout_close">#00000000</color>
+    <color name="item_add_image">#283492</color>
+    <color name="item_remove_image">#d74214</color>
 </resources>
