Display general data (post count) of day and month

--- a/app/src/main/res/layout/fragment_month_card_behind.xml
+++ b/app/src/main/res/layout/fragment_month_card_behind.xml
@@ -72,6 +72,16 @@
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
+            <ProgressBar
+                android:id="@+id/pbLoading"
+                android:indeterminateTint="@color/dashboard_card_default_background"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </FrameLayout>
