--- a/app/src/main/res/layout/layout_create_post_actions.xml
+++ b/app/src/main/res/layout/layout_create_post_actions.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:gravity="end|bottom"
     android:background="#80000000"
-    android:paddingBottom="@dimen/_15sdp"
     android:layout_height="match_parent">
+
+    <View
+        android:id="@+id/vContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/llAddImage"
+        android:layout_above="@id/llRemoveImage"
         android:layout_width="wrap_content"
         android:orientation="horizontal"
         android:layout_alignParentEnd="true"
@@ -29,6 +34,7 @@
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="wrap_content"
+        android:layout_above="@id/btToggleOptions"
         android:id="@+id/llRemoveImage"
         android:orientation="horizontal"
         android:layout_alignParentEnd="true"
@@ -48,15 +54,19 @@
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
         android:id="@+id/btToggleOptions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_20sdp"
+        android:background="@color/dashboard_card_default_background"
         android:clipChildren="false"
         android:clipToPadding="false"
-        android:layout_margin="@dimen/_10sdp"
-        android:layout_alignParentEnd="true"
-        android:background="@color/dashboard_card_default_background"
         android:src="@drawable/ic_cancel"
-        android:tint="@color/white"
-        android:layout_height="wrap_content"/>
+        android:tint="@color/white" />
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+</RelativeLayout>
