--- a/app/src/main/res/layout/fragment_month_card_front.xml
+++ b/app/src/main/res/layout/fragment_month_card_front.xml
@@ -58,6 +58,7 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
+                android:id="@+id/tvPostData"
                 android:fontFamily="@font/quicksand_medium"
                 android:text="21/31"
                 app:layout_constraintStart_toStartOf="@id/pbProgress"
@@ -75,6 +76,16 @@
                 android:layout_width="@dimen/_30sdp"
                 android:layout_height="wrap_content"
                 app:tint="@color/text_component_dashboard" />
+
+            <ProgressBar
+                android:id="@+id/pbLoading"
+                android:indeterminateTint="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
