--- a/app/src/main/res/layout/item_day_in_month.xml
+++ b/app/src/main/res/layout/item_day_in_month.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="data"
-            type="com.cleanarchitectkotlinflowhiltsimplestway.domain.models.MonthDayData" />
+            type="com.cleanarchitectkotlinflowhiltsimplestway.domain.models.DayData" />
     </data>
 
     <TextView
