--- a/app/src/main/res/layout/fragment_month_card_front.xml
+++ b/app/src/main/res/layout/fragment_month_card_front.xml
@@ -17,6 +17,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <ImageView
+                android:id="@+id/ivBackground"
+                android:src="@drawable/bg_jun"
+                android:scaleType="centerCrop"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <View
+                android:background="@drawable/bg_image_overlay"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
             <TextView
                 android:id="@+id/tvMonthInNumber"
                 android:layout_width="wrap_content"
