--- a/app/src/main/res/layout/item_day_in_month.xml
+++ b/app/src/main/res/layout/item_day_in_month.xml
@@ -9,6 +9,8 @@
     </data>
 
     <TextView
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
         android:id="@+id/tvDateInMonth"
         android:gravity="center"
         android:textSize="17sp"
