--- a/app/src/main/res/layout/item_month_post.xml
+++ b/app/src/main/res/layout/item_month_post.xml
@@ -13,6 +13,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
         android:layout_marginHorizontal="@dimen/_15sdp"
         android:layout_marginVertical="@dimen/_8sdp"
         app:cardElevation="20sp">
@@ -122,7 +124,7 @@
                     android:text="@{post.dayOfMonth}"
                     android:id="@+id/tvDate"
                     android:fontFamily="@font/oswald_bold"
-                    android:alpha="0.8"
+                    android:alpha="0.7"
                     android:textColor="@color/black"
                     tools:text="14"
                     android:includeFontPadding="false"
@@ -134,7 +136,7 @@
                     android:text="@{post.dayOfWeek}"
                     android:id="@+id/tvWeekDay"
                     android:fontFamily="@font/oswald_bold"
-                    android:alpha="0.8"
+                    android:alpha="0.7"
                     android:textColor="@color/black"
                     tools:text="MON"
                     android:textAllCaps="true"
