--- a/app/src/main/res/layout/fragment_month_card_front.xml
+++ b/app/src/main/res/layout/fragment_month_card_front.xml
@@ -1,33 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    >
 
     <FrameLayout
-        android:padding="@dimen/_20sdp"
-        android:background="@drawable/shadow_blue"
         android:id="@+id/shadow_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginHorizontal="@dimen/_5sdp"
-        >
+        android:background="@drawable/shadow_blue"
+        android:padding="@dimen/_20sdp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
+            android:clickable="true"
+            android:id="@+id/clContent"
+            android:foreground="?attr/selectableItemBackground"
             android:layout_height="match_parent">
 
-            <ImageView
+            <com.makeramen.roundedimageview.RoundedImageView
+                app:riv_corner_radius="@dimen/background_image_radius"
                 android:id="@+id/ivBackground"
-                android:src="@drawable/bg_jun"
-                android:scaleType="centerCrop"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/bg_jun" />
 
             <View
-                android:background="@drawable/bg_image_overlay"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:background="@drawable/bg_image_overlay" />
 
             <TextView
                 android:id="@+id/tvMonthInNumber"
@@ -36,68 +40,68 @@
                 android:layout_marginHorizontal="@dimen/_20sdp"
                 android:fontFamily="@font/quicksand_regular"
                 android:includeFontPadding="false"
+                android:text="7"
                 android:textColor="@color/text_component_dashboard"
                 android:textSize="65sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:text="7" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:textAllCaps="true"
                 android:id="@+id/tvMonthInText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_20sdp"
                 android:fontFamily="@font/quicksand_medium"
                 android:includeFontPadding="false"
+                android:text="Jul"
+                android:textAllCaps="true"
                 android:textColor="@color/text_component_dashboard"
                 android:textSize="25sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvMonthInNumber"
-                android:text="Jul" />
+                app:layout_constraintTop_toBottomOf="@id/tvMonthInNumber" />
 
             <ProgressBar
                 android:id="@+id/pbProgress"
-                android:progress="50"
-                android:progressTint="@color/white"
-                android:progressBackgroundTint="@color/white"
-                android:layout_marginBottom="@dimen/_15sdp"
-                android:layout_marginHorizontal="@dimen/_20sdp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="@dimen/_150sdp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/_20sdp"
+                android:layout_marginBottom="@dimen/_15sdp"
+                android:progress="50"
+                android:progressBackgroundTint="@color/white"
+                android:progressTint="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
                 android:id="@+id/tvPostData"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/quicksand_medium"
                 android:text="21/31"
-                app:layout_constraintStart_toStartOf="@id/pbProgress"
-                app:layout_constraintBottom_toTopOf="@id/pbProgress"
                 android:textColor="@color/text_component_dashboard"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                app:layout_constraintBottom_toTopOf="@id/pbProgress"
+                app:layout_constraintStart_toStartOf="@id/pbProgress" />
 
             <ImageView
-                android:padding="@dimen/_7sdp"
-                app:layout_constraintBottom_toBottomOf="@id/pbProgress"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:src="@drawable/ic_three_dots"
-                android:adjustViewBounds="true"
                 android:layout_width="@dimen/_30sdp"
                 android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:padding="@dimen/_7sdp"
+                android:src="@drawable/ic_three_dots"
+                app:layout_constraintBottom_toBottomOf="@id/pbProgress"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:tint="@color/text_component_dashboard" />
 
             <ProgressBar
                 android:id="@+id/pbLoading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:indeterminateTint="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
