--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -16,7 +16,14 @@
             app:enterAnim="@anim/default_enter_anim"
             app:exitAnim="@anim/default_exit_anim"
             app:popEnterAnim="@anim/default_pop_enter_anim"
-            app:popExitAnim="@anim/default_pop_exit_anim" />
+            app:popExitAnim="@anim/default_pop_exit_anim">
+
+            <argument
+                android:name="time"
+                app:argType="long"
+                app:nullable="false" />
+
+        </action>
         <action
             android:id="@+id/action_dashboardFragment_to_monthPostsFragment"
             app:destination="@id/monthPostsFragment"
@@ -40,7 +47,16 @@
         android:id="@+id/createDiaryPostFragment"
         android:name="com.cleanarchitectkotlinflowhiltsimplestway.presentation.create.CreateDiaryPostFragment"
         android:label="CreateDiaryPostFragment"
-        tools:layout="@layout/fragment_create_diary_post" />
+        tools:layout="@layout/fragment_create_diary_post">
+        <argument
+            android:name="time"
+            app:argType="long"
+            app:nullable="false" />
+        <argument
+            android:name="post"
+            app:argType="com.cleanarchitectkotlinflowhiltsimplestway.domain.models.DiaryPost"
+            app:nullable="true" />
+    </fragment>
     <fragment
         android:id="@+id/monthPostsFragment"
         android:name="com.cleanarchitectkotlinflowhiltsimplestway.presentation.posts.MonthPostsFragment"
@@ -54,5 +70,17 @@
             android:name="year"
             app:argType="integer"
             app:nullable="false" />
+        <action
+            android:id="@+id/action_monthPostsFragment_to_createDiaryPostFragment"
+            app:destination="@id/createDiaryPostFragment"
+            app:enterAnim="@anim/default_enter_anim"
+            app:exitAnim="@anim/default_exit_anim"
+            app:popEnterAnim="@anim/default_pop_enter_anim"
+            app:popExitAnim="@anim/default_pop_exit_anim">
+            <argument
+                android:name="post"
+                app:argType="com.cleanarchitectkotlinflowhiltsimplestway.domain.models.DiaryPost"
+                app:nullable="true" />
+        </action>
     </fragment>
 </navigation>
