--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="shadow_size">2.5dp</dimen>
     <dimen name="shadow_radius">15dp</dimen>
     <dimen name="background_image_radius">15sp</dimen>
+    <dimen name="indicator_size">4dp</dimen>
+    <dimen name="indicator_padding">7dp</dimen>
 </resources>
