--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -14,6 +14,7 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             style="@style/ToolBarIcon"
+            android:id="@+id/ivSearch"
             android:layout_alignParentStart="true"
             app:srcCompat="@drawable/ic_diary_search" />
 
