--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -49,6 +49,13 @@
             app:exitAnim="@anim/default_exit_anim"
             app:popEnterAnim="@anim/default_pop_enter_anim"
             app:popExitAnim="@anim/default_pop_exit_anim" />
+        <action
+            android:id="@+id/action_dashboardFragment_to_navigation_setting"
+            app:destination="@id/navigation_setting"
+            app:enterAnim="@anim/default_enter_anim"
+            app:exitAnim="@anim/default_exit_anim"
+            app:popEnterAnim="@anim/default_pop_enter_anim"
+            app:popExitAnim="@anim/default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/createDiaryPostFragment"
@@ -108,4 +115,5 @@
                 app:nullable="true" />
         </action>
     </fragment>
+    <include app:graph="@navigation/navigation_setting" />
 </navigation>
