--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,12 @@
         <item name="android:layout_width">match_parent</item>
     </style>
 
+    <style name="SettingDivider" parent="Divider">
+        <item name="android:layout_marginLeft">@dimen/_10sdp</item>
+        <item name="android:layout_marginRight">@dimen/_10sdp</item>
+        <item name="android:layout_marginTop">@dimen/_10sdp</item>
+    </style>
+
     <style name="WeatherSelectorContainer">
         <item name="android:foreground">?attr/selectableItemBackground</item>
         <item name="android:clickable">true</item>
@@ -84,5 +90,30 @@
         <item name="android:layout_marginTop">@dimen/_5sdp</item>
         <item name="android:layout_marginBottom">@dimen/_5sdp</item>
     </style>
+
+    <style name="SettingHeader">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/oswald_medium</item>
+        <item name="android:alpha">0.25</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_marginStart">@dimen/_10sdp</item>
+        <item name="android:layout_marginEnd">@dimen/_10sdp</item>
+    </style>
+
+    <style name="SettingItem">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/oswald_bold</item>
+        <item name="android:alpha">0.6</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:padding">@dimen/_10sdp</item>
+        <item name="android:clickable">true</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+        <item name="android:drawableEnd">@drawable/ic_setting_next</item>
+    </style>
+
 
 </resources>
